--- a/Ridge regularization/ridge-regression-gradient-descent.ipynb
+++ b/Ridge regularization/ridge-regression-gradient-descent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "0a64ff79",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "id": "f5d0adc9",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "id": "877a6fcc",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "id": "f356594b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "7353416f",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "id": "dd9147db",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "id": "bc87d135",
    "metadata": {},
    "outputs": [
@@ -72,10 +72,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score 0.4408783662250152\n",
-      "[  49.38829154 -148.993237    366.84437837  266.5147463    -3.39784865\n",
-      "  -55.23108181 -167.55525594  138.12877883  325.67055866  101.75650011]\n",
-      "[145.99981928]\n"
+      "R2 score 0.4177878581291634\n",
+      "[  53.20836448 -128.95240563  346.71195654  253.33424328    3.79425938\n",
+      "  -46.37247406 -166.85922387  141.38182742  311.73287735  105.13764183]\n",
+      "[142.10374172]\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "id": "d9b329c6",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "id": "67492f20",
    "metadata": {},
    "outputs": [
@@ -110,10 +110,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score 0.46238922017853457\n",
-      "[  34.62617431 -290.42643559  483.96594581  367.96559729 -852.21640464\n",
-      "  498.74459944  183.78210203  276.57704126  757.34559544   36.95860457]\n",
-      "151.1041692189411\n"
+      "R2 score 0.46250101621477\n",
+      "[  34.52193585 -290.84083165  482.40182815  368.06788002 -852.44871579\n",
+      "  501.59161927  180.11114394  270.76336041  759.73536282   37.49136954]\n",
+      "151.10198521062856\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "id": "9c215108",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "id": "12040494",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "id": "cd5d4820",
    "metadata": {},
    "outputs": [
@@ -183,10 +183,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score 0.47379622696725354\n",
-      "[  46.65040212 -221.37723801  452.11770407  325.54645024  -29.09573382\n",
-      "  -96.47613436 -190.90029664  146.3286965   400.80754967   95.08979987]\n",
-      "150.86972442733904\n"
+      "R2 score 0.4738018280260913\n",
+      "[  46.65050914 -221.3750037   452.12080647  325.54248128  -29.09464178\n",
+      "  -96.47517735 -190.90017011  146.32900372  400.80267299   95.09048094]\n",
+      "150.86975316713477\n"
      ]
     }
    ],
@@ -206,11 +206,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6de467d8-efaf-4949-96f6-e31a9e4b649b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc89da3-947d-4d75-80f3-bf71c3a68b64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
