--- a/Logistic Regression/perceptron-trick-sigmoid.ipynb
+++ b/Logistic Regression/perceptron-trick-sigmoid.ipynb
@@ -2456,7 +2456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2470,7 +2470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
